--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Creative - Start Bootstrap Theme</title>
+    <title>Folium</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -30,6 +30,9 @@
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
+    <link rel="icon" 
+      type="imgage/ico" 
+      href="img/favicon.ico">
 </head>
 
 <body id="page-top">
@@ -97,7 +100,7 @@
                     <p> Entries form the core of the Folium app, providing templates for common functions such as writing up a case, reflecting on a critical moment, planning or reviewing a placement or just recording an event. Each entry can have multiple skills attached to it and the skill level can be modified within the entry.
                     </p>
                 </div>
-                <div class="col-lg-8 col-sm-12">
+                <div class="col-lg-8 col-sm-12 hide-overflow">
                     <img id="entries-screen" class="img-fluid" src="img/screen-02.jpg" alt="Entries Screen">
                 </div>
             </div>
@@ -302,7 +305,7 @@
     <script src="vendor/magnific-popup/jquery.magnific-popup.min.js"></script>
 
     <!-- Custom scripts for this template -->
-    <script src="js/creative.js"></script>
+    <script src="js/folium.js"></script>
 
 </body>
 
