--- a/index.html
+++ b/index.html
@@ -208,6 +208,7 @@
         crossorigin="anonymous"></script>
 
     <!-- Plugin JavaScript -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
     <script src="vendor/scrollreveal/scrollreveal.min.js"></script>>
 
     <!-- Custom scripts for this template -->
