--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
 
     <!-- Bootstrap core JavaScript -->
     <script
-        src="http://code.jquery.com/jquery-3.2.1.min.js"
+        src="https://code.jquery.com/jquery-3.2.1.min.js"
         integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
         crossorigin="anonymous"></script>
     <script 
@@ -212,7 +212,7 @@
     <script src="vendor/scrollreveal/scrollreveal.min.js"></script>>
 
     <!-- Custom scripts for this template -->
-    <script src="js/folium.js"></script>
+    <script src="js/folium.min.js"></script>
 
 </body>
 
