--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
 
     <!-- Plugin JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
-    <script src="vendor/scrollreveal/scrollreveal.min.js"></script>>
+    <script src="vendor/scrollreveal/scrollreveal.min.js"></script>
 
     <!-- Custom scripts for this template -->
     <script src="js/folium.min.js"></script>
