Delete gulpfile.js and package.json

--- a/index.html
+++ b/index.html
@@ -33,32 +33,6 @@
 </head>
 
 <body id="page-top">
-<!--
-    <nav class="navbar fixed-top navbar-toggleable-md navbar-light" id="mainNav">
-        <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarExample" aria-controls="navbarExample" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="container">
-            <a class="navbar-brand" href="#page-top">Folium</a>
-            <div class="collapse navbar-collapse" id="navbarExample">
-                <ul class="navbar-nav ml-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" href="#about">About</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#services">Services</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#portfolio">Portfolio</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#contact">Contact</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
--->
     <header class="masthead">
         <div class="header-content">
             <div class="header-content-inner">
@@ -180,7 +154,7 @@
                 <div class="col col-sm-4 push-sm-2 text-left">  
                 <img id="share icon" class="img-fluid" src="img/live-logo.png" alt="LIVE Logo"> 
                 </div>
-                <div class="col col-sm-4  push-sm-2 text-right">  
+                <div class="col col-sm-4  push-sm-2 text-right d-flex align-items-center">  
                 <img id="share icon" class="img-fluid" src="img/rvc-logo.png" alt="RVC Logo"> 
                 </div>
             </div>
