--- a/index.html
+++ b/index.html
@@ -123,12 +123,13 @@
                     <div>
                         <img id="share icon" class="img-fluid" src="img/folium-logo-large-blue.png" alt="Folium logo">
                     </div>
-                    <a href="http://folium.rvc.ac.uk" class="btn btn-primary mb-3" target="_blank"> LOG IN </a>
-                    <p>Dont have an account? Logon with your Google Account</p>
-                    <p>A Google logon will display the Royal Veterinary Colleges Veterinary Medicine Day One Competencies</p>
+                    <a href="https://folium.rvc.ac.uk" class="btn btn-primary mb-3" target="_blank"> TAKE A LOOK </a>
+                    <p>Take a look at the Royal Veterinary College version of Folium</p>
+                    <p>You can Login with a Google Account and use the Royal Veterinary College's Bachelor of Veterinary Medicine Day One Competencies</p>
                     <div>
-                        <img id="share icon" class="img-fluid mt-5" src="img/git-logo.png" alt="git logo">
-                        <p>Download Folium from Git</p>
+                        <a href="https://github.com/RoyalVeterinaryCollege/Folium" target="_blank">
+                            <img id="share icon" class="img-fluid mt-5" src="img/git-logo.png" alt="GitHub">                            
+                        </a>
                     </div>
                 </div>
             </div>
@@ -150,13 +151,9 @@
     </section>
     <section id="created">
         <div class="container">
-            <div class="row">
-                <div class="col col-sm-4 push-sm-2 text-left">  
-                <img id="share icon" class="img-fluid" src="img/live-logo.png" alt="LIVE Logo"> 
-                </div>
-                <div class="col col-sm-4  push-sm-2 text-right d-flex align-items-center">  
-                <img id="share icon" class="img-fluid" src="img/rvc-logo.png" alt="RVC Logo"> 
-                </div>
+            <div class="row d-flex justify-content-around">
+                <a href="http://www.live.ac.uk" target="_blank"><img id="share icon" class="img-fluid" src="img/live-logo.png" alt="LIVE Logo"></a>
+                <a href="http://www.rvc.ac.uk" target="_blank"><img id="share icon" class="img-fluid" src="img/rvc-logo.png" alt="RVC Logo"></a>
             </div>
             <div class="row">
                 <div class="col-lg-8 offset-lg-2 text-center">
