Some spacing issues on mobile

--- a/index.html
+++ b/index.html
@@ -151,9 +151,11 @@
     </section>
     <section id="created">
         <div class="container">
-            <div class="row d-flex justify-content-around">
-                <a href="http://www.live.ac.uk" target="_blank"><img id="share icon" class="img-fluid" src="img/live-logo.png" alt="LIVE Logo"></a>
-                <a href="http://www.rvc.ac.uk" target="_blank"><img id="share icon" class="img-fluid" src="img/rvc-logo.png" alt="RVC Logo"></a>
+            <div class="row">
+                <div class="col d-flex justify-content-around">
+                    <a href="http://www.live.ac.uk" target="_blank"><img id="share icon" class="img-fluid p-4" src="img/live-logo.png" alt="LIVE Logo"></a>
+                    <a href="http://www.rvc.ac.uk" target="_blank"><img id="share icon" class="img-fluid p-4" src="img/rvc-logo.png" alt="RVC Logo"></a>
+                </div>
             </div>
             <div class="row">
                 <div class="col-lg-8 offset-lg-2 text-center">
